--- a/roles/firth-docker/tasks/main.yml
+++ b/roles/firth-docker/tasks/main.yml
@@ -1,17 +1,40 @@
 ---
+
 - name: Add GPG key
   ansible.builtin.apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
+    url: "https://download.docker.com/linux/ubuntu/gpg"
     state: present
+    keyring: /etc/apt/keyrings/docker.gpg
   tags:
     - docker
 
-- name: Add docker repository to apt
-  ansible.builtin.apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-    state: present
+- name: Get DEB architecture
+  ansible.builtin.shell: dpkg --print-architecture
+  register: deb_architecture
   tags:
     - docker
+
+- name: Remove old docker repository from apt
+  ansible.builtin.apt_repository:
+    repo: deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+    state: absent
+  tags:
+    - docker
+
+
+- name: Docker Repo
+  ansible.builtin.deb822_repository:
+    name: docker
+    uris: "https://download.docker.com/linux/ubuntu"
+    suites: "{{ ansible_distribution_release }}"
+    state: present
+    signed_by: /etc/apt/keyrings/docker.gpg
+    components: main
+    architectures: "{{ deb_architecture.stdout }}"
+
+  tags:
+    - docker
+
 
 - name: Install docker
   ansible.builtin.apt:
