--- a/roles/water-gkhs-filebot/tasks/main.yml
+++ b/roles/water-gkhs-filebot/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 # Script support
-- name: Make sure plex has a bin
+- name: Make sure media library has a bin
   ansible.builtin.file:
-    path: "{{ plex_home }}/bin"
+    path: "{{ media_home }}/bin"
     state: directory
-    owner: plex
+    owner: "{{ media_user }}"
     mode: "0755"
   tags:
     - media
@@ -33,9 +33,9 @@
 - name: Add sync_or_swim script to bin
   ansible.builtin.template:
     src: sync_or_swim.sh
-    dest: "{{ plex_home }}/bin/sync_or_swim.sh"
+    dest: "{{ media_home }}/bin/sync_or_swim.sh"
     mode: "0755"
-    owner: plex
+    owner: "{{ media_user }}"
   tags:
     - media
 
@@ -44,18 +44,18 @@
 - name: Add sortitaaht script to bin
   ansible.builtin.template:
     src: sortitaaht.sh
-    dest: "{{ plex_home }}/bin/sortitaaht.sh "
+    dest: "{{ media_home }}/bin/sortitaaht.sh "
     mode: "0755"
-    owner: plex
+    owner: "{{ media_user }}"
   tags:
     - media
 
 - name: Add verbose sortitaaht script to bin
   ansible.builtin.template:
     src: sortitaaht.sh
-    dest: "{{ plex_home }}/bin/sortitaaht_verbose.sh "
+    dest: "{{ media_home }}/bin/sortitaaht_verbose.sh "
     mode: "0755"
-    owner: plex
+    owner: "{{ media_user }}"
   tags:
     - media
   vars:
@@ -64,9 +64,9 @@
 - name: Add Clear Bullshit script to bin
   ansible.builtin.template:
     src: clear_bullshit.sh
-    dest: "{{ plex_home }}/bin/clear_bullshit.sh "
+    dest: "{{ media_home }}/bin/clear_bullshit.sh "
     mode: "0755"
-    owner: plex
+    owner: "{{ media_user }}"
   tags:
     - media
 
@@ -74,8 +74,8 @@
   ansible.builtin.cron:
     name: filebot
     minute: 2,32
-    user: plex
-    job: "{{ plex_home }}/bin/sortitaaht.sh 2>&1 | logger --tag Filebot --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_port }}"
+    user: "{{ media_user }}"
+    job: "{{ media_home }}/bin/sortitaaht.sh 2>&1 | logger --tag Filebot --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port }}"
     cron_file: filebot
     state: present
   tags:
@@ -83,7 +83,7 @@
 
 - name: Delete old youtube script
   ansible.builtin.file:
-    path: "{{ plex_home }}/bin/youtube_download.sh"
+    path: "{{ media_home }}/bin/youtube_download.sh"
     state: absent
   tags:
     - media
@@ -92,9 +92,9 @@
 - name: Add download_youtube script to bin
   ansible.builtin.template:
     src: download_youtube.sh
-    dest: "{{ plex_home }}/bin/download_youtube.sh "
+    dest: "{{ media_home }}/bin/download_youtube.sh "
     mode: "0755"
-    owner: plex
+    owner: "{{ media_user }}"
   tags:
     - media
     - media_playlists
@@ -105,8 +105,8 @@
     name: download_youtube
     minute: "15"
     hour: 3
-    user: plex
-    job: "{{ plex_home }}/bin/download_youtube.sh 2>&1  | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_port }} --tag youtube"
+    user: "{{ media_user }}"
+    job: "{{ media_home }}/bin/download_youtube.sh 2>&1  | logger --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port }} --tag youtube"
     cron_file: download_youtube
     state: present
   tags:
@@ -126,9 +126,9 @@
 - name: Add remove_completed_torrents script to bin
   ansible.builtin.template:
     src: remove_completed_torrents.sh
-    dest: "{{ plex_home }}/bin/remove_completed_torrents.sh "
+    dest: "{{ media_home }}/bin/remove_completed_torrents.sh "
     mode: "0755"
-    owner: plex
+    owner: "{{ media_user }}"
   tags:
     - media
 
@@ -137,8 +137,8 @@
     name: remove_completed_torrents
     minute: "15"
     hour: 18
-    user: plex
-    job: "{{ plex_home }}/bin/remove_completed_torrents.sh 2>&1 | logger --server={{ plex_remote_syslog_host }} --port={{ plex_remote_syslog_port }} --tag torrent_remove"
+    user: "{{ media_user }}"
+    job: "{{ media_home }}/bin/remove_completed_torrents.sh 2>&1 | logger --server={{ medialibrary_remote_syslog_host }} --port={{ medialibrary_remote_syslog_port }} --tag torrent_remove"
     cron_file: remove_completed_torrents
     state: present
   tags:
